tests/type-check/good/obj-lub.arr

obj = if true:
  { a : 5, b : "hello" }
else:
  { a : 7 }
end

num :: Number = obj.a
