tests/type-check/bad/obj-lub.arr

obj = if true:
  { a : 5, b : "hello" }
else:
  { a : 7 }
end

num :: String = obj.b
